complete eat healty website

--- a/index.html
+++ b/index.html
@@ -14,6 +14,86 @@
 
 <body>
 
+    <section class="flexible-container">
+        <div class="helf-weight">
+            <h1> <span class="orange-color">Skip</span> The Diet, <br>
+                Just Eat Healthy <br>
+                With Food Network</h1>
+            <p class="p-text">Imagine you don't need a diet because we provide
+                healthy and delicious food for you!</p>
+
+            <a class="link-button" target="_blank" href="#">Order Now</a>
+        </div>
+        <div class="helf-weight">
+            <img class="helthy-img" src="images/male/hero-img.png" alt="">
+        </div>
+    </section>
+
+
+    <section class="about-me flexible-container">
+        <div class="helf-weight">
+            <img class="peson-image" src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="helf-weight about-me-text">
+            <h3>About Me</h3>
+            <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a
+                pharetra, feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in
+                suscipit non. Non commodo volutpat, pharetra, vel.</p>
+
+            <a class="contact-me-button" target="_blank" href="#">Contact Me</a>
+        </div>
+
+    </section>
+
+
+
+    <section class="recipies-area">
+        <div class="my-recipies">
+            <h3>My recipies</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s.</p>
+        </div>
+
+        <div class="flexible-container">
+            <div class="recipies-item">
+                <img class="recipies-image" src="images/food/Project Cover.jpg" alt="">
+                <h4>Recipie Title</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="recipies-item">
+                <img class="recipies-image" src="images/food/Project Cover.jpg" alt="">
+                <h4>Recipie Title</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="comment-area">
+
+        <div class="flexible-container">
+            <div class="comment-item">
+                <h4>700K</h4>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="comment-item">
+                <h4>2.4m</h4>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="comment-item">
+                <h4>100K</h4>
+                <p>Dribbble Shot Likes</p>
+            </div>
+        </div>
+    </section>
+
 </body>
+<footer>
+    <p>Author: Hege Refsnes<br>
+    <p>© Farvez Hossen 2023, My Eat Helthy</p>
+    </p>
+</footer>
 
 </html>
